[tool.poetry]
name = "eb-demo-stocks-api"
version = "0.1.0"
description = ""
authors = ["Jonathan Howarth <jonathan.michael.howarth@gmail.com>"]
readme = "README.md"
packages = [{include = "eb_demo_stocks_api"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
flask-smorest = "^0.42.0"
flask-jwt-extended = "^4.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
